# okta-AIAgent-Visualiser

./: .gitignore  README.md  back-start.sh  front-start.sh
backend/: pyproject.toml
backend/app/: config.py  errors.py  main.py
backend/app/auth/: dependencies.py  okta_oidc.py  pkce.py  router.py
backend/app/connections/: models.py  store.py
backend/app/graph/: assemble.py  contract.py  deeplinks.py  router.py
backend/app/okta_client/: ai_agents.py  base.py  directory.py  mcp_servers.py  models.py  resource_servers.py
backend/app/risk/: context.py  models.py  router.py  rules.py
backend/app/session/: models.py  store.py
backend/tests/: test_ai_agents.py  test_assemble.py  test_directory.py  test_okta_client_retry.py  test_pkce.py  test_risk_engine.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: auth.ts  client.ts  graph.ts  risk.ts
frontend/src/components/: DetailPanel.tsx  Header.tsx  Legend.tsx  SearchBox.tsx
frontend/src/graph/: CytoscapeCanvas.tsx  contextMenu.ts  cytoscapeStyle.ts  groupMembers.ts  layouts.ts
frontend/src/screens/: GraphScreen.tsx  OrgConnectScreen.tsx  RiskReportScreen.tsx
frontend/src/types/: graph.ts  risk.ts
